# finance-api

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml
db/: schema.sql
src/: main.rs
